--- a/api/package.json
+++ b/api/package.json
@@ -9,21 +9,21 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.12.0",
-    "@strapi/plugin-users-permissions": "4.12.0",
-    "@strapi/plugin-i18n": "4.12.0",
-    "mysql": "2.18.1"
+    "@strapi/plugin-i18n": "4.12.4",
+    "@strapi/plugin-users-permissions": "4.12.4",
+    "@strapi/strapi": "4.12.4",
+    "better-sqlite3": "8.5.0",
+    "strapi-plugin-populate-deep": "^3.0.0"
   },
   "author": {
     "name": "A Strapi developer"
   },
   "strapi": {
-    "uuid": "1eca791f-da69-49f2-98e1-8a562f15a7e8"
+    "uuid": "9b91652a-3644-4e76-8e22-4f3a6b8c48c1"
   },
   "engines": {
-    "node": ">=14.19.1 <=18.x.x",
+    "node": ">=16.0.0 <=20.x.x",
     "npm": ">=6.0.0"
   },
   "license": "MIT"
