Add Resume and About section.

--- a/api/package.json
+++ b/api/package.json
@@ -7,23 +7,29 @@
     "develop": "strapi develop",
     "start": "strapi start",
     "build": "strapi build",
-    "strapi": "strapi"
+    "strapi": "strapi",
+    "deploy": "strapi deploy"
   },
   "dependencies": {
-    "@strapi/plugin-i18n": "4.12.4",
-    "@strapi/plugin-users-permissions": "4.12.4",
-    "@strapi/strapi": "4.12.4",
-    "better-sqlite3": "8.5.0",
-    "strapi-plugin-populate-deep": "^3.0.0"
+    "@strapi/plugin-cloud": "4.25.0",
+    "@strapi/plugin-i18n": "4.25.0",
+    "@strapi/plugin-users-permissions": "4.25.0",
+    "@strapi/strapi": "4.25.0",
+    "pg": "8.8.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "5.3.4",
+    "strapi-plugin-populate-deep": "^3.0.1",
+    "styled-components": "5.3.3"
   },
   "author": {
     "name": "A Strapi developer"
   },
   "strapi": {
-    "uuid": "9b91652a-3644-4e76-8e22-4f3a6b8c48c1"
+    "uuid": "f11ee3e8-fc46-4add-be89-2e90bf5d6279"
   },
   "engines": {
-    "node": ">=16.0.0 <=20.x.x",
+    "node": ">=18.0.0 <=20.x.x",
     "npm": ">=6.0.0"
   },
   "license": "MIT"
