--- a/nuxt-client/package.json
+++ b/nuxt-client/package.json
@@ -20,6 +20,9 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.3",
-    "@nuxtjs/google-fonts": "^3.0.2"
+    "@nuxtjs/google-fonts": "^3.0.2",
+    "nuxt-strapi-blocks-renderer": "^1.0.6",
+    "vue-markdown-render": "^2.2.1",
+    "vue-strapi-blocks-renderer": "^0.2.2"
   }
 }
