--- a/api/dockerfile
+++ b/api/dockerfile
@@ -1,3 +1,9 @@
+# Creating multi-stage build for production
+FROM node:18-alpine as build
+RUN apk update && apk add --no-cache build-base gcc autoconf automake zlib-dev libpng-dev vips-dev git > /dev/null 2>&1
+ARG NODE_ENV=production
+ENV NODE_ENV=${NODE_ENV}
+
 WORKDIR /opt/
 COPY package.json package-lock.json ./
 RUN npm install -g node-gyp
