change start to deploy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     build: 
       context: ./api
       dockerfile: Dockerfile
-    image: strapi:latest
+    image: strapi
     restart: unless-stopped
     env_file: .env
     environment:
