--- a/api/dockerfile
+++ b/api/dockerfile
@@ -24,6 +24,8 @@ WORKDIR /opt/app
 COPY --from=build /opt/app ./
 ENV PATH /opt/node_modules/.bin:$PATH
 
+RUN mkdir -p /opt/app/uploads && chown -R node:node /opt/app/uploads
+
 RUN chown -R node:node /opt/app
 USER node
 EXPOSE 1337
