--- a/api/dockerfile
+++ b/api/dockerfile
@@ -24,7 +24,7 @@ WORKDIR /opt/app
 COPY --from=build /opt/app ./
 ENV PATH /opt/node_modules/.bin:$PATH
 
-RUN mkdir -p /opt/app/uploads && chown -R node:node /opt/app/uploads
+RUN mkdir -p /opt/app/public/uploads && chown -R node:node /opt/app/public/uploads
 
 RUN chown -R node:node /opt/app
 USER node
