--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - traefik.http.routers.portfolio.entrypoints=websecure
       - traefik.http.routers.portfolio.tls.certresolver=myresolver
     volumes:
-      - ./public/uploads:/opt/app/.output/public/uploads
+      - ./public/uploads:/opt/app/public/uploads
   strapi:
     container_name: strapi
     build: 
