--- a/api/.dockerignore
+++ b/api/.dockerignore
@@ -21,7 +21,11 @@ logs
 *.log
 
 # Environment files
-.env*
+.env
+.env.local
+.env.development
+.env.test
+!.env.production
 !.env.example
 
 # Git
