--- a/nuxt-client/Dockerfile
+++ b/nuxt-client/Dockerfile
@@ -1,6 +1,11 @@
 # Multi-stage build for production
 # Build stage
 FROM node:20-alpine as builder
+
+# Accept build arguments
+ARG SUPABASE_URL
+ARG SUPABASE_ANON_KEY
+
 # Set working directory
 WORKDIR /opt/app
 # Copy package files
@@ -9,9 +14,9 @@ COPY package*.json ./
 RUN npm ci && npm cache clean --force
 # Copy source code
 COPY . .
-# Set build-time environment variables for Supabase
-ENV SUPABASE_URL=https://supabase.chrisgrime.com
-ENV SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJyb2xlIjoiYW5vbiIsImlzcSI6InN1cGFiYXNlIiwiaWF0IjoxNzU2MTkxNjAwLCJleHAiOjE5MTM5NTgwMDB9.m6ZSBvlHqBJpNPSeIfnXm35vcxfYThFSQj3K4qw0tTM
+# Set build-time environment variables
+ENV SUPABASE_URL=${SUPABASE_URL}
+ENV SUPABASE_ANON_KEY=${SUPABASE_ANON_KEY}
 # Build the application
 RUN npm run build
 
