--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -11,6 +11,9 @@ services:
     environment:
       - NUXT_PUBLIC_BASE_URL=${NUXT_PUBLIC_BASE_URL}
       - NUXT_PUBLIC_STRAPI_URL=${NUXT_PUBLIC_STRAPI_URL}
+      - SUPABASE_URL=${SUPABASE_URL}
+      - SUPABASE_KEY=${SUPABASE_KEY}
+      - NODE_ENV=${NODE_ENV}
     volumes:
       - /mnt/homeserver/portfolio/uploads:/opt/app/.output/public/uploads
   
