--- a/nuxt-client/package.json
+++ b/nuxt-client/package.json
@@ -19,9 +19,6 @@
     "@nuxtjs/supabase": "^1.6.1",
     "nuxt": "^4.0.3",
     "vue": "^3.5.20",
-    "vue-router": "^4.5.1"
-  },
-  "devDependencies": {
+    "vue-router": "^4.5.1",
     "@nuxtjs/tailwindcss": "^6.14.0"
-  }
 }
